# HRBuilder

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: HRBuilder_workflows.yml
api/v1/: __init__.py
api/v1/application/: routing.py  schemas.py
api/v1/specialization/: repositories.py  routing.py  schemas.py
core/: config.py  db_helper.py
infra/: .env.example  docker-compose.yml
models/: __init__.py  additional_info.py  application.py  cities.py  enums.py  payment.py  specializations.py  users.py  vacancy.py
