[tool.poetry]
name = "hrbuilder"
version = "0.1.0"
description = ""
authors = ["Rashid Ayoupov <valentaine1234@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pydantic-settings = "^2.2.1"
sqlalchemy-file = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
autoflake = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
